--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://username.github.io"
+url: "http://syamherle.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -25,10 +25,10 @@ description: A virtual proof that name is awesome!
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
+    
     - Learn markdown: "http://www.markdowntutorial.com/"
     - GitHub Pages: "https://github.com/syamherle"
-  Author's home: "http://deanattali.com"
+  Author's home: "https://github.com/syamherle"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
